--- a/src/app/adonde/location-details/location-details.component.html
+++ b/src/app/adonde/location-details/location-details.component.html
@@ -1,10 +1,47 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-        <h4 class="text-black" id="AppName" routerLink="/home" routerLinkActive="active">Ad‌&#243;nde</h4>
-        <div id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link d-inline text-black" routerLink="/home" routerLinkActive="active">Home <span class="sr-only"></span></a>
-                </li>
-            </ul>
+<body>
+        <navbar textcolor="text-dark"></navbar>
+    <!--
+    <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
+            <h4 class="text-black" id="AppName" routerLink="/home" routerLinkActive="active">Ad‌&#243;nde</h4>
+            <div id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link d-inline text-black" routerLink="/home" routerLinkActive="active">Home <span class="sr-only"></span></a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
+    -->
+        <div class="container" *ngIf="location">
+    
+            <div id="LocationName">
+                <h1 class="display-4">
+                  {{location.city}}
+                  <span class="text-muted">, {{location.country}}</span>
+                </h1>
+            </div>
+            
+            <div class="jumbotron bg-dark">
+                <div class="row">
+                    <div class="container float-left" style="width: 40%">
+                        <p class="text-white">{{location.description}}</p>
+                        <hr class="my-4">
+                        
+                        <h4><span class="badge badge-danger">Safety Rating
+                            <span class="badge badge-light">{{location.safety_rating}}</span>
+                        </span></h4>
+                        
+                    </div>
+                    <iframe class="float-right mr-3"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.4355583082!2d-118.6919226066309!3d34.020730496220175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos+Angeles%2C+CA!5e0!3m2!1sen!2sus!4v1511373199170" 
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
+                    </iframe>
+                    <div class="clearfix"></div>
+                </div>
+            </div> 
+    
+    
+            <!--<flights></flights>-->
+            <!--<location-reviews [locationReviews]="location.reviews"></location-reviews>-->
         </div>
-</nav>
+    </body>
