--- a/src/app/adonde/search-results/search-results.component.html
+++ b/src/app/adonde/search-results/search-results.component.html
@@ -101,3 +101,20 @@
   </div>  
 
 <div class="d-flex "><small class="text-muted ml-auto" [hidden]="!isNull(hiddenArray)">Sourced from Wikipedia</small></div>
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" *ngIf="selectedLocation">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">{{selectedLocation.city}}, {{selectedLocation.country}}</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <p class="m-3">{{selectedLocation.description}}</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click) = "viewLocationDetails(selectedLocation.location_id)" >View Full Details</button>
+            </div>
+        </div>
+    </div>
+</div>
