--- a/search-results.component.html
+++ b/search-results.component.html
@@ -265,9 +265,9 @@
           <p class="card-text" style="height:50%; overflow: hidden">{{suggestedLocation.description}}</p>
           <br>
           <div class="clearfix">
-              <a tabindex="0" class="btn btn-success cursor-pointer" [hidden]="!loggedIn || savedArray[suggestedLocation.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="save2(suggestedLocation.location_id)">Save</a>
-              <a tabindex="0" class="btn btn-danger cursor-pointer" [hidden]="!loggedIn || !savedArray[suggestedLocation.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="unsave2(suggestedLocation.location_id)">Unsave</a>
-              <button class="btn btn-info float-right" data-toggle="modal" data-target="#myModal" (click)="setLocationIndex(suggestedLocation.location_id -1)">Quick View</button>
+              <a tabindex="0" class="btn btn-success cursor-pointer" [hidden]="!loggedIn || savedArray[suggestedLocation.location_id]" role="button" data-toggle="popover" data-trigger="focus" (click)="save(suggestedLocation.location_id)">Save</a>
+              <a tabindex="0" class="btn btn-danger cursor-pointer" [hidden]="!loggedIn || !savedArray[suggestedLocation.location_id]" role="button" data-toggle="popover" data-trigger="focus" (click)="unsave(suggestedLocation.location_id)">Unsave</a>  
+              <button class="btn btn-info float-right cursor-pointer" data-toggle="modal" data-target="#myModal" (click)="setLocationIndex(suggestedLocation.location_id -1)">Quick View</button>
           </div>  
         </div>
         <div class="card-footer d-flex">
@@ -298,9 +298,9 @@
         <p class="card-text" style="height:50%; overflow: hidden">{{location.description}}</p>
         <br>
         <div class="clearfix">
-            <a tabindex="0" class="btn btn-success cursor-pointer" [hidden]="!loggedIn || savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="save(location.location_id)">Save</a>
-            <a tabindex="0" class="btn btn-danger cursor-pointer" [hidden]="!loggedIn || !savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="unsave(location.location_id)">Unsave</a>
-            <button class="btn btn-info float-right" data-toggle="modal" data-target="#myModal" (click)="setLocationIndex(i)">Quick View</button>
+            <a tabindex="0" class="btn btn-success cursor-pointer" [hidden]="!loggedIn || savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" (click)="save(location.location_id)">Save</a>
+            <a tabindex="0" class="btn btn-danger cursor-pointer" [hidden]="!loggedIn || !savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" (click)="unsave(location.location_id)">Unsave</a>
+            <button class="btn btn-info float-right cursor-pointer" data-toggle="modal" data-target="#myModal" (click)="setLocationIndex(i)">Quick View</button>
         </div>  
       </div>
       <div class="card-footer d-flex">
@@ -324,8 +324,8 @@
                 <p class="m-3">{{selectedLocation.description}}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" (click) = "viewLocationDetails(selectedLocation.location_id)" >View Full Details</button>
+                <button type="button" class="btn btn-default cursor-pointer" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary cursor-pointer" data-dismiss="modal" (click) = "viewLocationDetails(selectedLocation.location_id)" >View Full Details</button>
             </div>
         </div>
     </div>
